# moros

./: .gitignore  .vercelignore  README.md
circuits/: bet_validity.circom  build.sh  encrypt.circom  encrypt_build.sh  package-lock.json  package.json  test-encrypt-e2e.mjs
contracts/: Cargo.toml  README.md
contracts/event-resolver/: Cargo.toml
contracts/event-resolver/src/: lib.rs  test.rs
contracts/lmsr-market/: Cargo.toml
contracts/lmsr-market/src/: lib.rs  math.rs  test.rs
contracts/lmsr-market/test_snapshots/test/: price_is_half_at_zero.1.json
contracts/market-factory/: Cargo.toml
contracts/market-factory/src/: lib.rs  test.rs
contracts/market-liquidity-vault/: Cargo.toml
contracts/market-liquidity-vault/src/: lib.rs  test.rs
contracts/pooled-liquidity-vault/: Cargo.toml
contracts/pooled-liquidity-vault/src/: lib.rs  test.rs
contracts/privacy-types/: Cargo.toml
contracts/privacy-types/src/: lib.rs
contracts/resolver/: Cargo.toml
contracts/resolver/src/: lib.rs  test.rs
contracts/shielded-collateral-vault/: Cargo.toml
contracts/shielded-collateral-vault/circuits/: balance_action.circom  batch.circom  claim.circom  deposit.circom  execution_change.circom  exit_action.circom  exit_cancel.circom  exit_match.circom  exit_request.circom  liquidity_action.circom  liquidity_exit.circom  liquidity_fund.circom  liquidity_redeem.circom  order.circom  poseidon2_sponge.circom  position_action.circom  privacy_primitives.circom  refund.circom  transfer.circom  treasury.circom  withdraw.circom
contracts/shielded-collateral-vault/circuits/test/: batch.json  batch_singleton.json  claim.json  deposit.json  deposit_notes.json  execution_change.json  exit_cancel.json  exit_match.json  exit_request.json  generate-active-exit-fixtures.mjs  generate-batch-fixture.mjs  generate-deposit-fixture.mjs  generate-liquidity-fixtures.mjs  generate-order-fixture.mjs  generate-output-note-fixture.mjs  generate-position-fixtures.mjs  generate-transfer-fixture.mjs  generate-treasury-fixture.mjs  generate-withdraw-fixture.mjs  liquidity_exit.json  liquidity_fund.json  liquidity_redeem.json  order.json  output_note.circom  output_note.json  output_note_expected.json  poseidon2_sponge_46.circom  poseidon2_sponge_46.json  privacy-fixture-lib.mjs  refund.json  run.mjs  transfer.json  transfer_notes.json  treasury.json  void_refund.json  withdraw.json
contracts/shielded-collateral-vault/src/: lib.rs  test.rs
contracts/shielded-pool/: Cargo.toml  README.md
contracts/shielded-pool/circuits/: batch.circom  commitment.circom  deposit.circom  encrypt_order.circom  main.circom  order.circom  order_commit.circom  order_redeem.circom  order_redeem_v2.circom  order_redeem_v3.circom  position_redeem.circom
contracts/shielded-pool/circuits/test/: order-commit-check.mjs
contracts/shielded-pool/contract/src/: lib.rs  test.rs
contracts/shielded-pool/libs/lean-imt/src/: lib.rs
contracts/shielded-pool/tooling/: README.md  batch-input-generator.rs  coinutils-side.patch  order-tree-generator.rs  tree-proof-generator.rs
contracts/zk-verifier/: Cargo.toml
contracts/zk-verifier/src/: lib.rs  test.rs
deployments/: batched-market-testnet.json  committee-batch-testnet.json  frontend-phase-c-testnet.json  frontend-phase-d-testnet.json  full-e2e-committee-testnet.json  full-economics-testnet.json  multipool-testnet.json  platform-hardening-testnet.json  private-testnet.json  redeploy-testnet.json  resolver-testnet.json  shielded-pool-testnet.json
docs/: demo-script.md  market-flow.md
services/: .env.example  Caddyfile.moros  OPS.md  README.md  batcher.mjs  config.mjs  current-market-targets.mjs  deploy-private-testnet.mjs  deploy-vm.sh  (+33 more)
(+281 files in other folders)
