[workspace]
resolver = "2"
members = ["event-resolver", "lmsr-market", "resolver"]
exclude = ["shielded-pool"]

[workspace.dependencies]
soroban-sdk = "26.1.0"

# Soroban release profile. NOTE: overflow-checks = true is a deliberate solvency
# fix because a silent i128 wrap on the money path could mis-price a trade. Keep it on.
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
