[package]
name = "pooled-liquidity-vault"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
market-liquidity-vault = { path = "../market-liquidity-vault" }
soroban-sdk = { workspace = true, features = ["testutils"] }
