[package]
name = "resolver"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
lmsr-market = { path = "../lmsr-market" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
