[package]
name = "resolver"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

# lmsr-market is a dev-dependency only: it is a contract crate (cdylib) and linking
# it into the resolver's own wasm would duplicate exported symbols (e.g. `init`).
# The resolver talks to the market through a local #[contractclient] interface;
# the real market crate is needed only to register it in tests.
[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
lmsr-market = { path = "../lmsr-market" }
