[package]
name = "zk-verifier"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
privacy-types = { path = "../privacy-types" }
soroban-sdk = { workspace = true }

[dev-dependencies]
ark-bn254 = { version = "0.5.0", default-features = false, features = ["curve"] }
ark-ff = { version = "0.5.0", default-features = false }
ark-groth16 = { version = "0.5.0", default-features = false }
ark-relations = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false, features = ["std"] }
soroban-sdk = { workspace = true, features = ["testutils"] }
